- Improve permission page (Voltan)
- Add topic URL function (Voltan)
- Add function for show subtopic contents in main topic (Voltan)
- Add Rebuild Alias function (Voltan)
- Add Set and reset Next and Previous function automatically (Voltan)
- Add change topic order whit AJAX (Voltan)
- Add new options for make URL (Voltan)

Language changes :
+ Add
- Remove
* Edit

main.php
+ _FMCONTENT_TOPIC_ID 
+ _FMCONTENT_TOPIC_NAME 
+ _FMCONTENT_TOPIC_DESC 
+ _FMCONTENT_TOPIC_IMG 

admin.php
+ _FMCONTENT_TOPIC_HOMEPAGE
+ _FMCONTENT_TOPIC_HOMEPAGE_DESC
+ _FMCONTENT_TOPIC_HOMEPAGE_1
+ _FMCONTENT_TOPIC_HOMEPAGE_2
+ _FMCONTENT_TOPIC_HOMEPAGE_3
+ _FMCONTENT_TOPIC_HOMEPAGE_4
+ _FMCONTENT_TOPIC_OPTIONS
+ _FMCONTENT_TOPIC_OPTIONS_DESC
+ _FMCONTENT_TOPIC_ALIAS
+ _FMCONTENT_ALIAS_TITLE
+ _FMCONTENT_ALIAS_CONTENT
+ _FMCONTENT_ALIAS_TOPIC
+ _FMCONTENT_TOPIC_NUM
+ _FMCONTENT_MSG_ALIASERROR

* _FMCONTENT_TOPIC_ONLINE

modinfo.php
+ _FMCONTENT_HOMEPAGE 
+ _FMCONTENT_HOMEPAGE_DESC 
+ _FMCONTENT_HOMEPAGE_1 
+ _FMCONTENT_HOMEPAGE_2 
+ _FMCONTENT_HOMEPAGE_3 
+ _FMCONTENT_HOMEPAGE_4
+ _FMCONTENT_URL_SHORT
+ _FMCONTENT_TOPICNAME
+ _FMCONTENT_TOPICNAME_DESC   

* _FMCONTENT_FRIENDLYURL_DESC

- _FMCONTENT_URL_FRIENDLY

1.05
=================================
- Improve blocks (ianez - Voltan) 
- Fix bug in getTopicCount (Voltan)
- Fix menu block for show all contents (Voltan)
- improve all templates (ianez)

1.04
=================================
- Fix error on permissions when there is no topic (Mamba)
- Fix some html errors in templates (Voltan)
- Add page title for pages and topic (Voltan)
- Fix Breadcrumb (ianez - Voltan)
- Fix fmcontent_Url if topic title not exist (Voltan)
- Fix fmcontent_AjaxFilter (ianez - Voltan)
- improve all templates (ianez)

1.03 
=================================
- Fix error if topic not exist (Voltan)
- Fix error FolderHandler in tools.php (Voltan)
- Change $tpl whit $xoopsTpl in admin pages (Voltan)
- Fix fmcontent_Filter function for change capitalized (Voltan)