@@ -64,6 +64,7 @@ CREATE TABLE `fmcontent_topic` (
 `topic_showcoms` tinyint (1)   NOT NULL default '1',
 `topic_alias` varchar(255) NOT NULL,
 `topic_homepage` tinyint (4)   NOT NULL ,
+`topic_show` tinyint (1)   NOT NULL default '1'
 PRIMARY KEY (`topic_id`,`topic_modid`),
 UNIQUE KEY `topic_id` (`topic_id`,`topic_modid`)
 ) ENGINE=MyISAM;
